Fixed overlapping of sections.

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 section {
-	height: 100vh;
+	min-height: 100vh;
 }
 
 h2 {
